# hifi

./: BUILD.md  BUILD_ANDROID_WIN.md  CMakeLists.txt
cmake/android/: AarToLibProject.cmake  AndroidManifest.xml.in  QtCreateAPK.cmake  ToolchainSetup.cmake  android.toolchain.cmake
cmake/macros/: LinkHifiLibraries.cmake  SetupHifiLibrary.cmake  TargetOpenGL.cmake
cmake/modules/: FindGVR.cmake  FindLeoPoly.cmake
gvr-interface/: CMakeLists.txt
gvr-interface/src/: Client.cpp  Client.h  GVRMainWindow.cpp  GVRMainWindow.h  RenderingClient.cpp  RenderingClient.h
interface/: CMakeLists.txt
interface/src/: Application.cpp  Application.h  DiscoverabilityManager.cpp  GLCanvas.cpp  LODManager.cpp  main.cpp
interface/src/ui/: Stats.cpp  (+3 more)
libraries/daydream/: CMakeLists.txt
libraries/daydream/src/: DaydreamPlugin.cpp  DaydreamPlugin.h  DisplayPlugin.cpp  DisplayPlugin.h  plugin.json
libraries/daydream/src/daydream/: DaydreamControllerManager.cpp  DaydreamControllerManager.h  DaydreamDisplayPlugin.cpp  DaydreamDisplayPlugin.h  DaydreamHelpers.cpp  DaydreamHelpers.h
libraries/display-plugins/: CMakeLists.txt
libraries/entities-renderer/: CMakeLists.txt
libraries/entities-renderer/src/: EntityTreeRenderer.cpp  RenderableLeoPolyEntityItem.cpp  RenderableLeoPolyEntityItem.h  RenderableLightEntityItem.cpp
libraries/gl-android/: CMakeLists.txt
libraries/gpu-gl-android/: CMakeLists.txt
libraries/networking/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/hifiPrioVR/: CMakeLists.txt
script-archive/avatarMover/: avatarMover.js
scripts/: defaultScripts.js
(+212 files in other folders)
